<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Toolbar Importation -->
    <include
        android:id="@+id/search_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@id/dates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toolbar">

        <include
            android:id="@+id/search_tv"
            layout="@layout/auto_complete_text_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/tv_title_date_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:accessibilityLiveRegion="none"
                android:hint="@string/begin_date"
                android:layout_marginLeft="8dp"
                android:textAlignment="viewStart"
                android:textCursorDrawable="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_title_date_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_date_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:layout_marginLeft="8dp"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_title_date_start"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/tv_date_start_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_date_end_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_date_start"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:accessibilityLiveRegion="none"
                    android:textColor="#000000"
                    android:textCursorDrawable="@android:color/black" />

                <TextView
                    android:id="@+id/tv_date_start_underline"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/underlineColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_date_end_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_date_start_layout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_date_end"
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_date_end_underline"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/underlineColor" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/search_checkBoxes"
            layout="@layout/checkboxes" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/search"
            android:textAppearance="@style/Toolbar.TitleText"
            app:layout_constraintTop_toBottomOf="@+id/search_checkBoxes" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>