<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkboxes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="32dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/art_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            app:layout_constraintBaseline_toBaselineOf="@+id/politics_checkBox"
            app:layout_constraintEnd_toStartOf="@+id/politics_checkBox"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/politics_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/politics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/art_checkBox"
            tools:layout_conversion_absoluteHeight="136dp"
            android:onClick="onCheckboxClicked"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/business_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/business"
            app:layout_constraintBaseline_toBaselineOf="@+id/sport_checkBox"
            app:layout_constraintEnd_toStartOf="@+id/sport_checkBox"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/sport_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/business_checkBox"
            android:onClick="onCheckboxClicked"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/entrepreneur_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/entrepreneurs"
            app:layout_constraintBaseline_toBaselineOf="@+id/travel_checkBox"
            app:layout_constraintEnd_toStartOf="@+id/travel_checkBox"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/travel_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/travel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/entrepreneur_checkBox"
            android:onClick="onCheckboxClicked"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>