<resources>

    <string name="app_name">MyNews</string>
    <string name="select_a_date">Select a date</string>
    <string name="end_date">End Date</string>
    <string name="begin_date">Begin Date</string>
    <string name="arts">Arts</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="travel">Travel</string>
    <string name="search">SEARCH</string>
    <string name="search_query_term">Search query term</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>

    <array name="titlesPagesViewPager">
        <item>TOP STORIES</item>
        <item>MOST POPULAR</item>
        <item>BUSINESS</item>

    </array>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>


