<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Notifications"

        />

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="Help" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="About" />

</menu>