<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar Importation -->

    <include
        android:id="@+id/notifications_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@id/linear_layout" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/notifications_toolbar">

        <include
            android:id="@+id/notifications_tv"
            layout="@layout/auto_complete_text_view"
            android:paddingTop="32dp" />

        <include
            android:id="@+id/notifications_checkBoxes"
            layout="@layout/checkboxes"
            android:paddingTop="32dp" />

        <Switch
            android:id="@+id/notifications_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:text="@string/enable_notifications_once_per_day" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>